﻿============================== 2021-07-18 ==============================

  new data (thanks to Osamu Takayama, Technical University of Denmark, Lyngby, Denmark, for submitting data!)
    main/Si/Shkondin.yml
    other/doped crystals/Al-ZnO/Shkondin.yml
  new data (thanks to Jan Hrabovský, Charles University, Prague, Czech Republic!)
    main/Lu3Al5O12/Hrabovsky.yml
    main/Y3Al5O12/Hrabovsky.yml
  new data (thanks to Kazi Islam, Tulane University, New Orleans, USA, for submitting data!)
    main/MoS2/Islam-o.yml
    main/MoS2/Islam-o.yml
    main/MoS2/Islam-1L.yml
    main/MoS2/Islam-fewL.yml
  new data (thanks to Volodymyr Zenin, University of Southern Denmark, for submitting YAML files!)
    main/BN/Lee.yml
  new data
    main/CdGa2S4/Kato-o.yml
    main/CdGa2S4/Kato-e.yml
    main/HgGa2S4/Kato-o.yml
    main/HgGa2S4/Kato-e.yml
  new data (thanks to Konstantinos Papatryfonos, University College London, UK, for submitting data!)
    main/GaAs/Papatryfonos.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-0.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-9.7.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-21.9.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-34.2.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-41.1.yml
    other/semiconductor alloys/AlAs-GaAs/Papatryfonos-45.2.yml
  new data (thanks to Swagato Sarkar, Leibniz-Institut für Polymerforschung Dresden, Germany, for submitting data in YAML format!)
    main/As2Se3/Joseph-400nm.yml
    main/As2Se3/Joseph-700nm.yml
    other/commercial plastics/NOA-61/Joseph.yml
    other/resists/Micro resist ma-N 1407.yml
  new data (thanks to Rajkumar Rabindra Singh, for submitting data in YAML format!)
    other/mixed organic/PBDBT-ITIC/Kerremans.yml
  new data (thanks to Henning Moldenhauer, Technische Universität Dortmund, Germany, for suggesting data!)
    other/amorphous/HAC/Smith-Td250C.yml
    other/amorphous/HAC/Smith-Ta350C.yml