@@ -1,0 +1,365 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "D.P. Kulikova, A.A. Dobronosova, V.V. Kornienko, I.A. Nechepurenko, A.S. Baburin, E.V. Sergeev, E.S. Lotkov, I.A. Rodionov, A.V. Baryshev, A.V. Dorofeenko. Optical properties of tungsten trioxide, palladium, and platinum thin films for functional nanostructures engineering, <a href=\"https://doi.org/10.1364/OE.405403\"><i>Opt. Express</i> <b>28</b>, 32049-32060 (2020)</a> (Numerical data kindly provided by Alexander Dorofeenko)"
+COMMENTS: "81 nm-thick WO<sub>3</sub> film deposited directly on SiO<sub>2</sub> substrate"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.300 2.48760 3.46607E-01
+        0.302 2.48235 3.21421E-01
+        0.304 2.47602 2.97455E-01
+        0.306 2.46875 2.74723E-01
+        0.308 2.46068 2.53221E-01
+        0.310 2.45192 2.32935E-01
+        0.312 2.44260 2.13843E-01
+        0.314 2.43282 1.95912E-01
+        0.316 2.42268 1.79108E-01
+        0.318 2.41225 1.63387E-01
+        0.320 2.40161 1.48708E-01
+        0.322 2.39083 1.35024E-01
+        0.324 2.37996 1.22290E-01
+        0.326 2.36906 1.10458E-01
+        0.328 2.35817 9.94824E-02
+        0.330 2.34734 8.93187E-02
+        0.332 2.33658 7.99226E-02
+        0.334 2.32593 7.12517E-02
+        0.336 2.31542 6.32654E-02
+        0.338 2.30507 5.59246E-02
+        0.340 2.29489 4.91922E-02
+        0.342 2.28490 4.30331E-02
+        0.344 2.27511 3.74137E-02
+        0.346 2.26553 3.23025E-02
+        0.348 2.25617 2.76698E-02
+        0.350 2.24704 2.34875E-02
+        0.352 2.23814 1.97293E-02
+        0.354 2.22948 1.63704E-02
+        0.356 2.22107 1.33874E-02
+        0.358 2.21289 1.07586E-02
+        0.360 2.20497 8.46351E-03
+        0.362 2.19730 6.48282E-03
+        0.364 2.18989 4.79855E-03
+        0.366 2.18273 3.39379E-03
+        0.368 2.17584 2.25267E-03
+        0.370 2.16922 1.36034E-03
+        0.372 2.16287 7.02806E-04
+        0.374 2.15681 2.66965E-04
+        0.376 2.15106 4.04785E-05
+        0.378 2.14567 0
+        0.380 2.14067 0
+        0.382 2.13595 0
+        0.384 2.13147 0
+        0.386 2.12721 0
+        0.388 2.12313 0
+        0.390 2.11922 0
+        0.392 2.11548 0
+        0.394 2.11188 0
+        0.396 2.10841 0
+        0.398 2.10508 0
+        0.400 2.10186 0
+        0.402 2.09876 0
+        0.404 2.09576 0
+        0.406 2.09286 0
+        0.408 2.09005 0
+        0.410 2.08733 0
+        0.412 2.08470 0
+        0.414 2.08214 0
+        0.416 2.07967 0
+        0.418 2.07726 0
+        0.420 2.07493 0
+        0.422 2.07266 0
+        0.424 2.07045 0
+        0.426 2.06830 0
+        0.428 2.06621 0
+        0.430 2.06418 0
+        0.432 2.06220 0
+        0.434 2.06027 0
+        0.436 2.05839 0
+        0.438 2.05656 0
+        0.440 2.05477 0
+        0.442 2.05303 0
+        0.444 2.05132 0
+        0.446 2.04966 0
+        0.448 2.04804 0
+        0.450 2.04645 0
+        0.452 2.04490 0
+        0.454 2.04339 0
+        0.456 2.04191 0
+        0.458 2.04046 0
+        0.460 2.03904 0
+        0.462 2.03766 0
+        0.464 2.03630 0
+        0.466 2.03498 0
+        0.468 2.03368 0
+        0.470 2.03241 0
+        0.472 2.03116 0
+        0.474 2.02994 0
+        0.476 2.02874 0
+        0.478 2.02757 0
+        0.480 2.02642 0
+        0.482 2.02529 0
+        0.484 2.02419 0
+        0.486 2.02310 0
+        0.488 2.02204 0
+        0.490 2.02100 0
+        0.492 2.01997 0
+        0.494 2.01897 0
+        0.496 2.01798 0
+        0.498 2.01701 0
+        0.500 2.01606 0
+        0.502 2.01513 0
+        0.504 2.01421 0
+        0.506 2.01331 0
+        0.508 2.01242 0
+        0.510 2.01155 0
+        0.512 2.01070 0
+        0.514 2.00986 0
+        0.516 2.00903 0
+        0.518 2.00822 0
+        0.520 2.00742 0
+        0.522 2.00663 0
+        0.524 2.00586 0
+        0.526 2.00510 0
+        0.528 2.00435 0
+        0.530 2.00362 0
+        0.532 2.00289 0
+        0.534 2.00218 0
+        0.536 2.00148 0
+        0.538 2.00079 0
+        0.540 2.00011 0
+        0.542 1.99944 0
+        0.544 1.99878 0
+        0.546 1.99813 0
+        0.548 1.99749 0
+        0.550 1.99686 0
+        0.552 1.99624 0
+        0.554 1.99563 0
+        0.556 1.99503 0
+        0.558 1.99443 0
+        0.560 1.99385 0
+        0.562 1.99327 0
+        0.564 1.99270 0
+        0.566 1.99214 0
+        0.568 1.99159 0
+        0.570 1.99105 0
+        0.572 1.99051 0
+        0.574 1.98998 0
+        0.576 1.98946 0
+        0.578 1.98895 0
+        0.580 1.98844 0
+        0.582 1.98794 0
+        0.584 1.98744 0
+        0.586 1.98696 0
+        0.588 1.98648 0
+        0.590 1.98600 0
+        0.592 1.98553 0
+        0.594 1.98507 0
+        0.596 1.98462 0
+        0.598 1.98417 0
+        0.600 1.98372 0
+        0.602 1.98328 0
+        0.604 1.98285 0
+        0.606 1.98242 0
+        0.608 1.98200 0
+        0.610 1.98159 0
+        0.612 1.98117 0
+        0.614 1.98077 0
+        0.616 1.98037 0
+        0.618 1.97997 0
+        0.620 1.97958 0
+        0.622 1.97919 0
+        0.624 1.97881 0
+        0.626 1.97843 0
+        0.628 1.97806 0
+        0.630 1.97769 0
+        0.632 1.97733 0
+        0.634 1.97697 0
+        0.636 1.97661 0
+        0.638 1.97626 0
+        0.640 1.97592 0
+        0.642 1.97557 0
+        0.644 1.97524 0
+        0.646 1.97490 0
+        0.648 1.97457 0
+        0.650 1.97424 0
+        0.652 1.97392 0
+        0.654 1.97360 0
+        0.656 1.97328 0
+        0.658 1.97297 0
+        0.660 1.97266 0
+        0.662 1.97235 0
+        0.664 1.97205 0
+        0.666 1.97175 0
+        0.668 1.97146 0
+        0.670 1.97116 0
+        0.672 1.97087 0
+        0.674 1.97059 0
+        0.676 1.97030 0
+        0.678 1.97002 0
+        0.680 1.96975 0
+        0.682 1.96947 0
+        0.684 1.96920 0
+        0.686 1.96893 0
+        0.688 1.96867 0
+        0.690 1.96841 0
+        0.692 1.96815 0
+        0.694 1.96789 0
+        0.696 1.96763 0
+        0.698 1.96738 0
+        0.700 1.96713 0
+        0.702 1.96688 0
+        0.704 1.96664 0
+        0.706 1.96640 0
+        0.708 1.96616 0
+        0.710 1.96592 0
+        0.712 1.96569 0
+        0.714 1.96545 0
+        0.716 1.96522 0
+        0.718 1.96500 0
+        0.720 1.96477 0
+        0.722 1.96455 0
+        0.724 1.96433 0
+        0.726 1.96411 0
+        0.728 1.96389 0
+        0.730 1.96368 0
+        0.732 1.96346 0
+        0.734 1.96325 0
+        0.736 1.96305 0
+        0.738 1.96284 0
+        0.740 1.96263 0
+        0.742 1.96243 0
+        0.744 1.96223 0
+        0.746 1.96203 0
+        0.748 1.96183 0
+        0.750 1.96164 0
+        0.752 1.96145 0
+        0.754 1.96125 0
+        0.756 1.96106 0
+        0.758 1.96088 0
+        0.760 1.96069 0
+        0.762 1.96051 0
+        0.764 1.96032 0
+        0.766 1.96014 0
+        0.768 1.95996 0
+        0.770 1.95978 0
+        0.772 1.95961 0
+        0.774 1.95943 0
+        0.776 1.95926 0
+        0.778 1.95909 0
+        0.780 1.95892 0
+        0.782 1.95875 0
+        0.784 1.95858 0
+        0.786 1.95842 0
+        0.788 1.95825 0
+        0.790 1.95809 0
+        0.792 1.95793 0
+        0.794 1.95777 0
+        0.796 1.95761 0
+        0.798 1.95745 0
+        0.800 1.95730 0
+        0.802 1.95714 0
+        0.804 1.95699 0
+        0.806 1.95684 0
+        0.808 1.95669 0
+        0.810 1.95654 0
+        0.812 1.95639 0
+        0.814 1.95624 0
+        0.816 1.95610 0
+        0.818 1.95595 0
+        0.820 1.95581 0
+        0.822 1.95567 0
+        0.824 1.95552 0
+        0.826 1.95538 0
+        0.828 1.95525 0
+        0.830 1.95511 0
+        0.832 1.95497 0
+        0.834 1.95484 0
+        0.836 1.95470 0
+        0.838 1.95457 0
+        0.840 1.95444 0
+        0.842 1.95431 0
+        0.844 1.95418 0
+        0.846 1.95405 0
+        0.848 1.95392 0
+        0.850 1.95379 0
+        0.852 1.95367 0
+        0.854 1.95354 0
+        0.856 1.95342 0
+        0.858 1.95330 0
+        0.860 1.95317 0
+        0.862 1.95305 0
+        0.864 1.95293 0
+        0.866 1.95281 0
+        0.868 1.95270 0
+        0.870 1.95258 0
+        0.872 1.95246 0
+        0.874 1.95235 0
+        0.876 1.95223 0
+        0.878 1.95212 0
+        0.880 1.95201 0
+        0.882 1.95189 0
+        0.884 1.95178 0
+        0.886 1.95167 0
+        0.888 1.95156 0
+        0.890 1.95146 0
+        0.892 1.95135 0
+        0.894 1.95124 0
+        0.896 1.95113 0
+        0.898 1.95103 0
+        0.900 1.95092 0
+        0.902 1.95082 0
+        0.904 1.95072 0
+        0.906 1.95061 0
+        0.908 1.95051 0
+        0.910 1.95041 0
+        0.912 1.95031 0
+        0.914 1.95021 0
+        0.916 1.95011 0
+        0.918 1.95002 0
+        0.920 1.94992 0
+        0.922 1.94982 0
+        0.924 1.94973 0
+        0.926 1.94963 0
+        0.928 1.94954 0
+        0.930 1.94944 0
+        0.932 1.94935 0
+        0.934 1.94926 0
+        0.936 1.94917 0
+        0.938 1.94907 0
+        0.940 1.94898 0
+        0.942 1.94889 0
+        0.944 1.94880 0
+        0.946 1.94872 0
+        0.948 1.94863 0
+        0.950 1.94854 0
+        0.952 1.94845 0
+        0.954 1.94837 0
+        0.956 1.94828 0
+        0.958 1.94820 0
+        0.960 1.94811 0
+        0.962 1.94803 0
+        0.964 1.94795 0
+        0.966 1.94786 0
+        0.968 1.94778 0
+        0.970 1.94770 0
+        0.972 1.94762 0
+        0.974 1.94754 0
+        0.976 1.94746 0
+        0.978 1.94738 0
+        0.980 1.94730 0
+        0.982 1.94722 0
+        0.984 1.94714 0
+        0.986 1.94706 0
+        0.988 1.94699 0
+        0.990 1.94691 0
+        0.992 1.94684 0
+        0.994 1.94676 0
+        0.996 1.94669 0
+        0.998 1.94661 0
+        1.000 1.94654 0
+SPECS:
+    n_absolute: true
+    wavelength_vacuum: true
+    film_thickness: 81 nm
+    substrate: SiO2
