@@ -1,0 +1,23 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Tungsten trioxide, WO<sub>3</sub></h1>
+
+<h2>Other names</h2>
+<ul>
+<li>Tungstic anhydride</li>
+<li>Tungsten(VI) oxide</li>
+<li>Tungsten oxide</li>
+<li>Tungstic oxide</li>
+<li>Trioxotungsten</li>
+</ul>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Tungsten_trioxide">Tungsten trioxide - Wikipedia</a></li>
+<li><a href="https://pubchem.ncbi.nlm.nih.gov/compound/Tungsten-trioxide">Tungsten trioxide - PubChem</a></li>
+<li><a href="https://webbook.nist.gov/cgi/cbook.cgi?ID=C1314358">Tungsten trioxide - NIST Chemistry WEbbook</a></li>
+</ul>
