@@ -483,6 +483,9 @@
         - PAGE: Schröter
           name: "Schröter 1931: n 0.495-0.67 µm"
           data: "main/AgBr/Schroter.yml"
+        - PAGE: Polyanskiy
+          name: "Polyanskiy"
+          data: "main/AgBr/Polyanskiy.yml"
     - BOOK: CsBr
       name: "CsBr (Cesium bromide)"
       info: "main/CsBr.html"
@@ -2121,6 +2124,13 @@
         - PAGE: Bodurov
           name: "Bodurov et al. 2016: Nanoparticles; n 0.405-0.635 µm"
           data: "main/TiO2/Bodurov.yml"
+    - BOOK: WO3
+      name: "WO3 (Tungsten trioxide)"
+      info: "main/WO3.html"
+      content:      
+        - PAGE: Kulikova
+          name: "Kulikova et al. 2020: n,k 0.3-1.0 µm"
+          data: "main/WO3/Kulikova.yml"
     - BOOK: Y2O3
       name: "Y<sub>2</sub>O<sub>3</sub> (Yttrium sesquioxide)"
       info: "main/Y2O3.html"
