@@ -1,4 +1,10 @@
-﻿============================== 2021-07-18 ==============================
+﻿============================== Next release ==============================
+
+  new data (thanks to Alexander Dorofeenko, Institute for Theoretical and Applied Electromagnetics, Moscow, Russia, for submitting data in YAML format!)
+    main/WO3/Kulikova.yml
+
+
+============================== 2021-07-18 ==============================
 
   new data (thanks to Osamu Takayama, Technical University of Denmark, Lyngby, Denmark, for submitting data!)
     main/Si/Shkondin.yml
